--- a/src/components/Car/Car.scss
+++ b/src/components/Car/Car.scss
@@ -10,22 +10,19 @@
   }
 
   .amazing {
-    background-color: lightgreen;
+    background-color: #90EE90;
   }
 
   .good {
-    background-color: rgba(lightgreen, 0.3);
+    background-color: #E9FCE9;
   }
 
-  .amazing {
-    background-color: rgba(green, 0.8);
-  }
 
   .bad {
-    background-color: rgba(lightpink, 0.3);
+    background-color: #FFE9EC;
   }
 
   .trash {
-    background-color: rgba(red, 0.3);
+    background-color: #FF9999;
   }
 }
